Signal for storing empID

--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -13,6 +13,7 @@
       <p-tab
         *ngFor="let tab of formStructure.tabs; let i = index"
         [value]="i"
+        [disabled]="i!==0 && !registeredEmpID()"
         >
         <!-- [disabled]="currentTab() !== tab.tabName" -->
         {{ tab.tabName }}
