--- a/src/app/core/components/table/table.component.html
+++ b/src/app/core/components/table/table.component.html
@@ -1,12 +1,15 @@
 <div class="card">
   <p-contextmenu #cm [model]="contextItems" />
-
+  @if(data()){
   <p-table
+    #dt
+    [value]="data()"
+    [columns]="tableColumns"
+    [loading]="loading()"
+    dataKey="id"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [showCurrentPageReport]="true"
     [size]="'large'"
-    #dt
-    [value]="banks()"
     [tableStyle]="{ 'min-width': '60rem' }"
     [paginator]="true"
     [rows]="10"
@@ -14,12 +17,10 @@
     responsiveLayout="scroll"
     class="custom-table"
     [rowsPerPageOptions]="[5, 10, 20]"
-    dataKey="empId"
-    [globalFilterFields]="['name', 'bankId']"
+    [globalFilterFields]="globalFilterFields()"
     [(contextMenuSelection)]="selectedItem"
     [contextMenu]="cm"
     stateStorage="session"
-    [loading]="loading()"
     stateKey="statedemo-session"
   >
     <ng-template #caption>
@@ -34,10 +35,9 @@
           p-button
           icon="pi pi-plus"
           (click)="showDialog()"
-          label="Add Bank"
+          [label]="getAddButtonLabel()"
           styleClass="ml-2"
         />
-
         <p-iconfield iconPosition="left" class="ml-auto">
           <p-inputicon>
             <i class="pi pi-search"></i>
@@ -45,62 +45,44 @@
           <input
             pInputText
             type="text"
-            [value]="searchValue()"
             (input)="dt.filterGlobal($any($event.target).value, 'contains')"
             placeholder="Keyboard Search"
           />
         </p-iconfield>
       </div>
     </ng-template>
-
-    <ng-template pTemplate="header">
+    <ng-template pTemplate="header" let-columns>
       <tr>
-        <th pSortableColumn="bankId">Bank ID <p-sortIcon field="bankId" /></th>
-        <th pSortableColumn="name">Bank Name <p-sortIcon field="name" /></th>
-        <th pSortableColumn="description">
-          Description <p-sortIcon field="description" />
+        @for (col of columns; track col) {
+        <th [pSortableColumn]="col.field">
+          {{ col.header }} <p-sortIcon [field]="col.field" />
         </th>
-        <th pSortableColumn="abbrivation">
-          Abbreviation <p-sortIcon field="abbrivation" />
-        </th>
-        <th pSortableColumn="code">Bank Code <p-sortIcon field="code" /></th>
-
-        <th pSortableColumn="createdOn">
-          Created On <p-sortIcon field="createdOn" />
-        </th>
-
-        <th pSortableColumn="isActive">
-          Status <p-sortIcon field="isActive" />
-        </th>
+        }
+        <th>Status</th>
       </tr>
     </ng-template>
-
-    <ng-template pTemplate="body" let-bank>
-      <tr [pContextMenuRow]="bank" *ngIf="banks().length > 0">
-        <td>{{ bank.bankId }}</td>
-        <td>{{ bank.name }}</td>
-        <td>{{ bank.description }}</td>
-        <td>{{ bank.abbrivation }}</td>
-        <td>{{ bank.code }}</td>
-        <td>{{ bank.createdOn | date : "MMM d, y" }}</td>
-
+    <ng-template pTemplate="body" let-rowData let-columns="columns">
+      <tr [pContextMenuRow]="rowData">
+        @for (col of columns; track col) {
+        <td>{{ rowData[col.field] }}</td>
+        }
         <td>
           <span
             [ngClass]="{
-              'bg-green-100 text-green-800': bank.isActive === 1,
-              'bg-red-100 text-red-800': bank.isActive === 0
+              'bg-green-100 text-green-800': rowData['status'] === 1,
+              'bg-red-100 text-red-800': rowData['status'] === 0
             }"
             class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold"
           >
-            {{ bank.isActive === 1 ? "Active" : "Inactive" }}
+            {{ rowData["status"] === 1 ? "Active" : "Inactive" }}
           </span>
         </td>
       </tr>
     </ng-template>
   </p-table>
-
+  }
   <p-dialog
-    header="Add New Bank"
+    [header]="getDialogHeader()"
     [visible]="displayDialog()"
     styleClass="w-full md:w-[45rem]"
     [closable]="false"
@@ -108,7 +90,7 @@
   >
     <ng-template #header>
       <div class="flex items-center justify-between w-[100%]">
-        <h3 class="font-semibold text-lg">Add Bank Details</h3>
+        <h3 class="font-semibold text-lg">{{ getDialogHeader() }} Details</h3>
         <button
           pButton
           icon="pi pi-times"
@@ -117,60 +99,83 @@
         ></button>
       </div>
     </ng-template>
-    <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-center">
-      <label for="abbreviation" class="text-right font-medium"
-        >Abbreviation</label
-      >
-      <input
-        pInputText
-        [(ngModel)]="newBank.abbrivation"
-        id="abbreviation"
-        placeholder="Abbreviation"
-        required
-        class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
-      />
-    </div>
-    <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-center">
-      <label for="name" class="text-right font-medium">Bank Name</label>
-      <input
-        pInputText
-        [(ngModel)]="newBank.name"
-        id="name"
-        placeholder="Bank Name"
-        required
-        class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
-      />
-    </div>
-    <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-center">
-      <label for="code" class="text-right font-medium">Bank Code</label>
-      <input
-        pInputText
-        [(ngModel)]="newBank.code"
-        id="code"
-        placeholder="Bank Code"
-        required
-        class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
-      />
-    </div>
-    <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-start">
-      <label for="description" class="text-right font-medium"
-        >Description</label
-      >
-      <textarea
-        pInputTextarea
-        [(ngModel)]="newBank.description"
-        id="description"
-        placeholder="Description"
-        required
-        rows="5"
-        class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
-      ></textarea>
-    </div>
+
+    <ng-container *ngIf="currentDataType === 'floors'">
+      <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-center">
+        <label for="abbreviation" class="text-right font-medium"
+          >Select Building</label
+        >
+        <p-select
+          filterBy="name"
+          [checkmark]="true"
+          [options]="buildings()"
+          [(ngModel)]="selectedBuilding"
+          optionLabel="name"
+          placeholder="Select Building"
+          class="w-full md:w-56"
+        />
+      </div>
+      <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-center">
+        <label for="name" class="text-right font-medium">Floor Name</label>
+        <input
+          pInputText
+          [(ngModel)]="newFloor.name"
+          id="name"
+          placeholder="Floor Name"
+          required
+          class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
+        />
+      </div>
+
+      <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-start">
+        <label for="description" class="text-right font-medium"
+          >Description</label
+        >
+        <textarea
+          pInputTextarea
+          [(ngModel)]="newFloor.description"
+          id="description"
+          placeholder="Description"
+          required
+          rows="5"
+          class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
+        ></textarea>
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="currentDataType === 'buildings'">
+      <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-center">
+        <label for="name" class="text-right font-medium">Building Name</label>
+        <input
+          pInputText
+          [(ngModel)]="newBuilding.name"
+          id="name"
+          placeholder="Building Name"
+          required
+          class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
+        />
+      </div>
+      <div class="grid grid-cols-[120px_1fr] gap-4 mb-4 items-start">
+        <label for="description" class="text-right font-medium"
+          >Description</label
+        >
+        <textarea
+          pInputTextarea
+          [(ngModel)]="newBuilding.description"
+          id="description"
+          placeholder="Description"
+          required
+          rows="5"
+          class="w-full p-2 border rounded focus:outline-none focus:ring focus:border-blue-300"
+        ></textarea>
+      </div>
+    </ng-container>
+
     <div class="flex justify-end mt-4">
       <button
         pButton
         label="Save"
-        (click)="addBank()"
+        (click)="addOrUpdateItem()"
         class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded"
       ></button>
     </div>
