--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -10,7 +10,8 @@
     scrollable
   >
     <p-tablist>
-      <p-tab *ngFor="let tab of formStructure.tabs; let i = index" [value]="i" [disabled]="i!==0 && !registeredEmpID()">
+      <p-tab *ngFor="let tab of formStructure.tabs; let i = index" [value]="i" >
+        <!-- [disabled]="i!==0 && !registeredEmpID()" -->
         {{ tab.tabName }}
       </p-tab>
     </p-tablist>
