--- a/src/app/components/dynamic-form/dynamic-form.component.html
+++ b/src/app/components/dynamic-form/dynamic-form.component.html
@@ -152,6 +152,7 @@
           *ngIf="tab.tableData"
           [tableTitle]="tab.tabName"
           [tableData]="tab.tableData"
+          (dataEmitter)="receivedData($event)"
         ></app-dynamic-table>
       </p-tabpanel>
     </p-tabpanels>
