--- a/src/app/core/components/user-roles/user-roles.component.html
+++ b/src/app/core/components/user-roles/user-roles.component.html
@@ -1,1 +1,185 @@
-<p>user-roles works!</p>
+@let roles = roles$ | async;
+<p-table
+  [scrollable]="true"
+  scrollHeight="flex"
+  #dt
+  [value]="roles || []"
+  dataKey="id"
+  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+  [showCurrentPageReport]="true"
+  [size]="'large'"
+  [tableStyle]="{ 'min-width': '60rem' }"
+  [paginator]="true"
+  [rows]="10"
+  stripedRows
+  responsiveLayout="scroll"
+  class="custom-table w-full overflow-x-auto"
+  [rowsPerPageOptions]="[5, 10, 20]"
+  [globalFilterFields]="['name']"
+  stateStorage="session"
+  stateKey="statedemo-session"
+  [loading]="isLoading()"
+>
+  <ng-template #caption>
+    <div class="flex flex-wrap gap-2">
+      <p-button
+        label="Clear"
+        [outlined]="true"
+        icon="pi pi-filter-slash"
+        (click)="clear(dt)"
+      />
+      <p-button
+        p-button
+        icon="pi pi-plus"
+        label="Add Role"
+        styleClass="ml-2"
+        (click)="displayDialog.set(true)"
+      />
+      <p-iconfield iconPosition="left" class="ml-auto">
+        <p-inputicon>
+          <i class="pi pi-search"></i>
+        </p-inputicon>
+        <input
+          pInputText
+          type="text"
+          (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+          placeholder="Keyboard Search"
+          class="w-full md:w-56"
+        />
+      </p-iconfield>
+    </div>
+  </ng-template>
+  <ng-template pTemplate="header" let-columns>
+    <tr>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Status</th>
+      <th>Actions</th>
+    </tr>
+  </ng-template>
+  <ng-template
+    pTemplate="body"
+    let-rowData
+    let-columns="columns"
+    let-rowIndex="rowIndex"
+  >
+    <tr [pSelectableRow]="rowData">
+      <td>{{ rowData["id"] ?? " - " }}</td>
+      <td>{{ rowData["name"] ?? " - " }}</td>
+      <td>{{ rowData["description"] ?? " - " }}</td>
+      <td>
+        <span
+          [ngClass]="{
+            'bg-green-100 text-green-800': rowData['isActive'] === 1,
+            'bg-red-100 text-red-800': rowData['isActive'] === 0
+          }"
+          class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-semibold"
+        >
+          {{ rowData["isActive"] === 1 ? "Active" : "Inactive" }}
+        </span>
+      </td>
+      <td>
+        <button
+          pButton
+          icon="pi pi-pencil"
+          class="p-button-rounded p-button-text"
+          (click)="editRole(rowData)"
+        ></button>
+      </td>
+    </tr>
+  </ng-template>
+</p-table>
+
+<p-dialog
+  [visible]="displayDialog()"
+  styleClass="w-full md:w-[40rem]"
+  [closable]="false"
+  [maximizable]="true"
+  (onHide)="closeDialog()"
+>
+  <ng-template #header>
+    <div class="flex items-center justify-between w-full">
+      <h3 class="font-semibold text-lg">Create Role</h3>
+      <button
+        pButton
+        icon="pi pi-times"
+        (click)="displayDialog.set(false)"
+        class="p-button-rounded p-button-text"
+      ></button>
+    </div>
+  </ng-template>
+
+  <form [formGroup]="userForm" (ngSubmit)="submitForm()">
+    <div class="p-fluid grid gap-3">
+      <!-- Name -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="userName" class="w-full md:w-1/3 font-medium"
+          >Role Name</label
+        >
+        <div class="w-full md:w-2/3">
+          <input
+            pInputText
+            formControlName="name"
+            id="Name"
+            placeholder="Name"
+            class="w-full"
+          />
+          <p-message
+            class="mt-2"
+            *ngIf="
+              userForm.get('name')?.invalid &&
+              (userForm.get('name')?.dirty || userForm.get('name')?.touched)
+            "
+            severity="error"
+            text="Role name is required."
+          ></p-message>
+        </div>
+      </div>
+
+      <!-- Description -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="userName" class="w-full md:w-1/3 font-medium"
+          >Role Description</label
+        >
+        <div class="w-full md:w-2/3">
+          <input
+            pInputText
+            formControlName="description"
+            id="description"
+            placeholder="Description"
+            class="w-full"
+          />
+          <p-message
+            class="mt-2"
+            *ngIf="
+              userForm.get('description')?.invalid &&
+              (userForm.get('description')?.dirty ||
+                userForm.get('description')?.touched)
+            "
+            severity="error"
+            text="Role description is required."
+          ></p-message>
+        </div>
+      </div>
+
+      <!-- Status -->
+      <div class="col-12 flex flex-col md:flex-row items-center gap-2">
+        <label for="status" class="w-full md:w-1/3 font-medium">Status</label>
+        <div class="w-full md:w-2/3">
+          <p-checkbox formControlName="status" [binary]="true"></p-checkbox>
+        </div>
+      </div>
+    </div>
+
+    <!-- Buttons -->
+    <div class="flex justify-end mt-4">
+      <button
+        pButton
+        label="Save"
+        type="submit"
+        class="p-button p-button-primary"
+      ></button>
+    </div>
+  </form>
+</p-dialog>
